Add classes to control small button sizes. Get task status toggle working.
Reported-by: J. Aaron Crick

--- a/resources/public/site.css
+++ b/resources/public/site.css
@@ -8,3 +8,11 @@ fieldset {
     background-color: #F4F4F3;
     height: 100px;
 }
+
+.button.is-fixed-100 {
+    min-width: 100px;
+ }
+
+ .button.is-fixed-50 {
+    min-width: 50px;
+ }
